# html2hs

./: Html2Hs.hs  Main.hs  flake.nix  html-extractor.cabal  html2hs.cabal  index.hs
