Cabal-version:      3.4


name:               html2hs
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

executable html2hs
  default-language: GHC2021
  hs-source-dirs: .
  main-is: index.hs
  build-depends:
      base
    , tagsoup
    , bytestring
    , text
  ghc-options:
    -threaded -Wall
