Cabal-version:      3.4


name:               html2hs
version:            0.0.0.1
build-type:         Simple
license:            BSD-3-Clause

library
  exposed-modules:
    Html2Hs
  hs-source-dirs: .
  build-depends:
      base
    , tagsoup
    , bytestring
    , text
  default-language: Haskell2010

executable html2hs
  main-is: Main.hs
  build-depends:
      base
    , tagsoup
    , html2hs
  ghc-options:
    -threaded -Wall
  default-language: Haskell2010
